compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__ast_diagnostic_locations.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: impl1
---
Implementation {
    name: "program_0",
    type_name: "program_0",
    linkage: Internal,
    pou_type: Program,
    statements: [
        Assignment {
            left: Reference {
                name: "a",
            },
            right: Reference {
                name: "x",
            },
        },
    ],
    location: SourceLocation {
        span: None,
        file: Some(
            "<internal>.cfc",
        ),
    },
    name_location: SourceLocation {
        span: None,
        file: Some(
            "<internal>.cfc",
        ),
    },
    overriding: false,
    generic: false,
    access: None,
}
