compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__ast_generates_locations-2.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: dbg!(right.get_location())
---
SourceLocation {
    span: Id(
        1,
    ),
    file: Some(
        "<internal>.cfc",
    ),
}
