compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__ast_generates_locations-4.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: operator.get_location()
---
SourceLocation {
    span: Id(
        3,
    ),
    file: Some(
        "<internal>.cfc",
    ),
}
