compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__ast_generates_locations-5.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: param.get_location()
---
SourceLocation {
    span: Id(
        4,
    ),
    file: Some(
        "<internal>.cfc",
    ),
}
