compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__ast_generates_locations.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: impl1
---
Implementation {
    name: "program_0",
    type_name: "program_0",
    linkage: Internal,
    pou_type: Program,
    statements: [
        Assignment {
            left: Reference {
                name: "a",
            },
            right: Reference {
                name: "x",
            },
        },
        Assignment {
            left: Reference {
                name: "x",
            },
            right: CallStatement {
                operator: Reference {
                    name: "ADD",
                },
                parameters: Some(
                    ExpressionList {
                        expressions: [
                            Reference {
                                name: "a",
                            },
                            LiteralInteger {
                                value: 1,
                            },
                        ],
                    },
                ),
            },
        },
    ],
    location: SourceLocation {
        span: None,
        file: Some(
            "<internal>.cfc",
        ),
    },
    name_location: SourceLocation {
        span: None,
        file: Some(
            "<internal>.cfc",
        ),
    },
    overriding: false,
    generic: false,
    access: None,
}
