compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__conditional_return.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: "statements[0]"
---
ReturnStatement {
    condition: Some(
        BinaryExpression {
            operator: Equal,
            left: Reference {
                name: "val",
            },
            right: LiteralInteger {
                value: 5,
            },
        },
    ),
}
