compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__direct_connection_of_sink_to_other_source_ast_parses.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: "parse(content::SINK_TO_SOURCE).0.implementations[0].statements"
---
[
    Assignment {
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "myConnection",
                },
            ),
            base: None,
        },
        right: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "x",
                },
            ),
            base: None,
        },
    },
]
