compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__tests__tests__direct_connection_of_sink_to_other_source_generates_correct_model.snap
---
source: compiler/plc_xml/src/xml_parser/tests.rs
expression: "xml_parser::visit(content::SINK_TO_SOURCE).unwrap()"
---
Project {
    pous: [
        Pou {
            name: "myConnection",
            pou_type: Function,
            body: Body {
                function_block_diagram: Some(
                    FunctionBlockDiagram {
                        nodes: {
                            16: FunctionBlockVariable(
                                FunctionBlockVariable {
                                    kind: Input,
                                    local_id: 16,
                                    negated: false,
                                    expression: "x",
                                    execution_order_id: None,
                                    ref_local_id: None,
                                },
                            ),
                            4: FunctionBlockVariable(
                                FunctionBlockVariable {
                                    kind: Output,
                                    local_id: 4,
                                    negated: false,
                                    expression: "myConnection",
                                    execution_order_id: Some(
                                        3,
                                    ),
                                    ref_local_id: Some(
                                        16,
                                    ),
                                },
                            ),
                        },
                    },
                ),
            },
            actions: [],
            interface: Some(
                Interface {
                    add_data: Some(
                        Data {
                            content: "\n    FUNCTION myConnection : DINT\n    VAR_INPUT\n        x: DINT;\n    END_VAR\n                \nEND_FUNCTION",
                            handle: Implementation,
                        },
                    ),
                },
            ),
        },
    ],
}
